[package]
name = "secret_proxy_ca"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
cc_teec = { package = "rust-libteec", path = "../../rust-libteec" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
# libc is transitively present via cc_teec, but the vsock-test diagnostic
# subcommand touches AF_VSOCK / sockaddr_vm / connect(2) directly and needs
# a direct dependency for clear usage-site attribution.
libc = "0.2"
# thiserror: typed errors for the refactored module tree.
# Keeps Result<T, String> compatible via a From<Error> for String bridge
# (see src/error.rs) so migration can proceed incrementally.
thiserror = "1"
