[package]
name = "secret_proxy_ca"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# rust-libteec (exposed as `cc_teec`) is the GP TEE Client API crate.
# Pulled directly from gitee so this repo builds standalone — no need
# to sit inside the `openclaw-security-enhanced` parent. If a local
# sibling checkout is preferred during development, add a
# `[patch.crates-io]` or `[patch."https://gitee.com/..."]` section in
# `.cargo/config.toml` (kept out of version control).
cc_teec = { package = "rust-libteec", git = "https://gitee.com/jose47/rust-libteec.git", branch = "feat/android-vsock-cid" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
# libc is transitively present via cc_teec, but the vsock-test diagnostic
# subcommand touches AF_VSOCK / sockaddr_vm / connect(2) directly and needs
# a direct dependency for clear usage-site attribution.
libc = "0.2"
# thiserror: typed errors for the refactored module tree.
# Keeps Result<T, String> compatible via a From<Error> for String bridge
# (see src/error.rs) so migration can proceed incrementally.
thiserror = "1"

[dev-dependencies]
# Property-based testing — used for systematic exploration of the
# `ChunkedDecoder` (random split points against a naive reference
# oracle) and the `relay::core` state machine (random TA scripts
# verifying invariants like "no ToUpstream with empty bytes", "pump
# debounce is single-shot", etc.). Dev-only; never in production
# builds.
proptest = "1"

[features]
# Expose test-only mocks (`teec::mock::MockTeec`,
# `relay::upstream::MockUpstream`, `clock::MockClock`) to integration
# tests under `tests/`. Always active under `#[cfg(test)]` for unit
# tests inside this crate; enable with `--features test-support` to
# make the mocks visible to the integration test binaries.
#
# Run integration tests with:
#   cargo test --features test-support
test-support = []
